--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,9 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h1>Controlador carro</h1>
-  <ion-list>
-    <button ion-button (click)="goToMapaPage()">Crear mapa sala</button>
-    <button ion-button (click)="goToViajePage()">Ingresar recorrido</button>
-  </ion-list>
+  The world is your oyster.
+  <p>
+    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+  </p>
 </ion-content>
