--- a/src/pages/crear-obstaculo/crear-obstaculo.html
+++ b/src/pages/crear-obstaculo/crear-obstaculo.html
@@ -21,5 +21,6 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+    <button ion-button (click)="crear()" class="center">Crear</button>
   
 </ion-content>
