--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,6 +11,7 @@
     <ion-list>
       <button ion-button (click)="goToCrearMapa()">Crear Mapa</button>
       <button ion-button (click)="goToViaje()">Ingresar Recorrido</button>
+      <button ion-button (click)="goToAgregar()">Agregar Lugar</button>
     </ion-list>
   </div>
 </ion-content>
